<resources>
    <string name="app_name">Qur\'an Q</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome_message">Welcome to the Quran App</string>
    <!--  Google Sign-In  -->
    <string name="google_sign_in">Sign In with Google</string>
    <string name="WEB_CLIENT_ID">799003422446-6v42t4m4pe3s6gb3d1qumcj48urng7tq.apps.googleusercontent.com</string>
    <!--  Error messages  -->
    <string name="error_message">Something went wrong. Please try again.</string>
    <string name="loading">Loading..</string>
    <string name="logout">log Out</string>

    <!--  Helpers  -->
    <string name="verse_info">%s, Ayat %d</string>
    <string name="last_read">Terakhir Baca</string>
    <string name="font_size">Ukuran Font</string>
    <string name="qari">Pembaca Murottal</string>
    <string name="language">Bahasa</string>
    <string name="light_mode">Mode Terang</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="theme">Tema</string>
    <string name="home">Beranda</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">Pengaturan</string>
    <string name="no_sign_in">Lanjut Tanpa Sign In</string>
    <string name="sign_up_with_google">Masuk Dengan Google</string>
    <string name="add_reminder">Tambah Pengingat</string>
    <string name="select_time">Pilih Waktu</string>
    <string name="reminder_name_hint">Masukan Nama Pengingat</string>
    <string name="set_reminder_name">Nama Pengingat</string>
    <string name="set_time_name">Waktu Pengingat</string>
    <string name="cancel">Batal</string>
    <string name="confirm">Konfirmasi</string>
    <string name="time_format_24">%s:%s</string>
    <string name="reminder_input_empty_title">Input Kosong!</string>
    <string name="reminder_input_empty_message">Bagian nama dan waktu harus diisi.</string>
    <string name="reminder_exist_title">Pengingat sudah ada!</string>
    <string name="reminder_exist_message">Ada Pengingat dengan waktu atau nama yang sama, coba input nilai lain.</string>
    <string name="reminder">Pengingat</string>
    <string name="general_data_error">Ada Kesalahan saat menyimpan data.</string>
    <string name="reminder_message">Sudah baca Qur\'an Hari ini? Kamu sudah buat Pengingat di jam ini.</string>
    <string name="reminder_cancel_success">Pengingat Berhasil Dihapus.</string>
    <string name="reminder_update_success">Pengingat Berhasil Diubah.</string>
    <!--            -->

    <string-array name="languages">
        <item>Bahasa Indonesia</item>
        <item>বাংলা </item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>Русский</item>
        <item>Svenska</item>
        <item>Türkçe</item>
        <item>اردو </item>
        <item>中文</item>
    </string-array>

    <string-array name="voice_options">
        <item>AbdulBaset AbdulSamad</item>
        <item>Mishari Rashid al-`Afasy</item>
        <item>Hani ar-Rifai</item>
        <item>Abu Bakr al-Shatri</item>
        <item>Abdur-Rahman as-Sudais</item>
    </string-array>

    <string-array name="font_sizes">
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>

    </string-array>

    <string-array name="remainder_messages">
        <item>Kamu sudah membuat jadwal.. Jangan hanya buat jadwal, tapi di lakukan juga, dong.</item>
        <item>Sekarang jam mu membaca qur\'an, jangan terlalu fokus dengan duniawi, Kawan!</item>
    </string-array>

</resources>